# HotSauceJobs_agent

./: .replit  app.py  auth.py  forms.py  models.py  pyproject.toml  routes.py
migrations/versions/: 1b551c0b2201_add_image_field_to_company_model.py  36eaef93eef3_add_profile_picture_to_user_model.py  60a6e3d8536a_add_employer_profile_fields_to_user_.py  add_cover_photo_to_company.py  f22aa1f9d00e_add_profile_picture_and_description_to_.py
static/js/: main.js
templates/: apply.html  apply_for_job.html  base.html  company.html  edit_profile.html  employer_applications.html  index.html  job_details.html  login.html  post_job.html  profile.html  register.html  register_employer.html  register_job_seeker.html  search.html
templates/admin/: company_form.html  job_form.html  panel.html
templates/errors/: 404.html  500.html
