[tool.poetry]
name = "repl-nix-companyjobindex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-login = "^0.6.3"
werkzeug = "^3.0.4"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.35"
wtforms = "^3.1.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
